# serde-avro-bytes

./: Cargo.toml  Changelog.md  README.md  Readme.md
docs/: schema.json
examples/: bstr.rs  idiomatic.rs
src/: avro_bytes.rs  avro_error  lib.rs  main.rs
src/avro_bytes/: mod.rs  ser.rs
src/avro_bytes/de/: bstr.rs  bytes.rs  list.rs  map.rs  mod.rs
src/avro_bytes/ser/: bytes.rs  list.rs  map.rs  mod.rs  pair.rs
